--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@playwright/test": "^1.39.0",
     "playwright": "^1.39.0"
+  },
+  "dependencies": {
+    "exceljs": "^4.4.0"
   }
 }
